2005-07-03 Francois Proulx <francois.proulx@gmail.com>
	* Updated the XML venues status format ( version 1.0, once approved )
	* Added long / lat fields to nodes table ( for mapping purposes )
	
2005-06-17 Francois Proulx <francois.proulx@gmail.com>
	* Added IFrame and SimpleIFrame content types.
	
2005-06-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* classes/Content/Langstring.php:  Bug fix:  Langstring was always non-persistent, no matter the checkbox.  Move the code to TrivialLangstring.php where it belongs. 

2005-06-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* portal/inted.php:  Implement the start button functionnality (maybe it would be better to call it
	 "use the Internet").  From now on, once authenticated and when pressing the start
	  button on the portal, the user will be sent to the page he originally tried to 
	  access.  A second window will be popped with the portal page so he can come back
	   to it. The window is collapsed, and can be expanded back by clicking on the link.
	   I tried to make it cross platform (and mostly did) but it's still buggy in IE. 
	  
	  At the same time, this fixes the goof reported by Rob Kelley of nycwireless.net

	* portal/missing_original_url.php:  Displayed when the user tries to use the start button but for some reason the original url is unavailable
	* common.php:  New define CURRENT_REQUEST_URL, hopefully containing the full URL in 
	the user's URL bar.


2005-06-17 Francois Proulx <francois.proulx@gmail.com>
	* Removed forced Pattern Language on all hotspots
	* Do not show hotspot logo in portal page, only on login, until we find a better layout

2005-06-16 Francois Proulx <francois.proulx@gmail.com>
	* Added XML output format for hotspot_status.php
	* Rough draft v1.0
	* TODO move to different classes once stabilized
	* Can use XSLT, if activated ( XSLT_SUPPORT constant )
	* ie : http://wifidog-auth.org/hotspot_status.php?format=XML&xslt=http://wifidog-auth.org/xslt/hotspot_status.xsl